     cycles
   * Implemented bullet= for [objectives], [objective], [gold_carryover], and
     [note]
   * Implemented red=, green=, and blue= for [objective], [gold_carryover], and
     [note]
   * Added [theme] hidden= attribute that makes a theme unavailable for selection
     in Preferences or :theme (defaults to no)
 * Miscellaneous and bug fixes:
   * Add --language/-L commandline option to set the language for that session
   * Fixed: Avoid copying of singular iterators in the whiteboard code
   * Fixed bug #10969: Made it possible to switch themes from Preferences in the
     main menu
   * Fixed bug #16111: gold carryover if loading a save created in linger mode
   * Fixed bug #16508: remaining time of day areas that should affect map
     borders in mainline campaigns and MP scenarios
   * Fixed bug #18399 (part 1): Compilation with boost 1.47 (bug #18399's patch)
   * Fixed bug #18399 (part 5): Compilation with the clang 2.9 compiler (bug
     #18399's patch)
   * Fixed bug #18695: Fixed preload event not being fired
   * Fixed bug #18701: Evaluate key length even if intervening WML children
     don't exist
   * Fixed bug #18704: Make the create unit dialog give the created unit a valid
     gender for that unit type
   * Fixed bug #18766: Fixed a problem where version comparisons (including, but
     not limited to #ifver/#ifnver directives) could cease to work until Wesnoth
     was restarted
   * Fixed debian bug #636193: Fixed compilation on all Debian architectures
   * Fixed handling of #ifver and #ifnver preprocessor directives in wmllint
   * Removed CANYON and its associated terrain macros
   * The credits screen no longer mangles image path functions in background
     image lists
   * Fixed a rare glitch causing the menubar and sidebar buttons to appear
     initially as solid color rectangles at the beginning of a scenario start
     event
   * Fixed bug #18681: glitch with local time of day lighting

Version 1.9.9:
 * AI: