@@ -101,6 +101,8 @@ Version 1.9.9+svn:
      [note]
    * Added [theme] hidden= attribute that makes a theme unavailable for selection
      in Preferences or :theme (defaults to no)
+   * Implemented $second_unit being bound to the acting leader in recall/recruit events
+   * Added [secondary_unit] SUF for filtering the recalling leader in [recall] action WML
  * Miscellaneous and bug fixes:
    * Add --language/-L commandline option to set the language for that session
    * Fixed: Avoid copying of singular iterators in the whiteboard code
